fluxcd/infrastructure/controllers/base/istio/gateway-cell-membrane.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cell-membrane-gateway
  labels:
    purpose: business-work
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
