fluxcd/infrastructure/controllers/base/istio/gateway-phloem.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: phloem-gateway
  labels:
    purpose: personal-public
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
