fluxcd/infrastructure/controllers/base/istio/gateway-xylem.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: xylem-gateway
  labels:
    purpose: internal-only
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
